--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="/clue.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clue Game Sheet</title>
+    <style>
+      .github-fork-ribbon:before {
+        background-color: #333;
+      }
+    </style>
   </head>
   <body>
+    <a
+      class="github-fork-ribbon"
+      href="https://github.com/jimnguyen77/clue-sheet"
+      data-ribbon="Fork me on GitHub"
+      title="Fork me on GitHub"
+      >Fork me on GitHub</a
+    >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
